add null value in action list